macros/tests/entry/fail/duplicate.stderr
error: Duplicate attribute `exit_prompt`
 --> tests/entry/fail/duplicate.rs:4:27
  |
4 | #[entry(exit_prompt, log, exit_prompt, log, delay(69), delay(420), crate = "nuefi", crate = "nuefi")]
  |                           ^^^^^^^^^^^

error: Duplicate attribute `log`
 --> tests/entry/fail/duplicate.rs:4:40
  |
4 | #[entry(exit_prompt, log, exit_prompt, log, delay(69), delay(420), crate = "nuefi", crate = "nuefi")]
  |                                        ^^^

error: Duplicate attribute `delay`
 --> tests/entry/fail/duplicate.rs:4:56
  |
4 | #[entry(exit_prompt, log, exit_prompt, log, delay(69), delay(420), crate = "nuefi", crate = "nuefi")]
  |                                                        ^^^^^^^^^^

error: Duplicate attribute `crate`
 --> tests/entry/fail/duplicate.rs:4:85
  |
4 | #[entry(exit_prompt, log, exit_prompt, log, delay(69), delay(420), crate = "nuefi", crate = "nuefi")]
  |                                                                                     ^^^^^^^^^^^^^^^
